--- a/src/Pages/SignIn.css
+++ b/src/Pages/SignIn.css
@@ -23,6 +23,7 @@
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     width: 100%;
     max-width: 400px;
+    margin-top: 60px;
   }
   
   .signup-title {
@@ -79,5 +80,10 @@
   
   .signup-button:hover {
     background: #1f2937;
+  }
+  .signup-login-link{
+    color:#6366f1;
+    cursor: pointer;
+    font-size: 14px
   }
   
