--- a/src/homeCss/Brands.css
+++ b/src/homeCss/Brands.css
@@ -5,6 +5,7 @@
     padding: 20px;
     background-color: rgb(23, 23, 23);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin-top: 2px;
   }
   
   .brands span {
